# FakeCloudCPP

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  build_and_run.bat  build_and_run.sh  compile_commands.json  conanfile.txt  docker-compose.yml
Services/: CMakeLists.txt
Services/cpp_service/: CMakeLists.txt  Dockerfile  FetchCrow.cmake
Services/cpp_service/src/: main.cc  main_service.hh
Services/cpp_service_crud/: CMakeLists.txt
